--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="title_activity_question">QuestionActivity</string>
     <string name="questions">Answer the question to score points!</string>
     <string name="map_description">map</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="title_activity_multi_question">MultiQuestionActivity</string>
 
 </resources>
