--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="sudoku_description">Solve the sudoku!</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_multi_question">MultiQuestionActivity</string>
+    <string name="title_activity_mystery">Mystery</string>
 
 </resources>
